--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": ">=7.0.0",
+        "barryvdh/laravel-dompdf": "^0.8.1",
         "consoletvs/charts": "5.*",
         "fideloper/proxy": "~3.3",
         "laracasts/flash": "^3.0",
